progress sell page (write html)

--- a/sell.html
+++ b/sell.html
@@ -8,15 +8,56 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <a><img id="head_logo" src="" alt="Logo ACGDImmo"></a>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="">Acheter</a>
+                </li>
+                <li>
+                    <a href="">Louer</a>
+                </li>
+                <li>
+                    <a href="sell.html">Vendre</a>
+                </li>
+                <li>
+                    <a href="">Contact</a>
+                </li>
             </ul>
         </nav>
+        <button>
+            <span></span>
+            <span>Mon compte</span>
+        </button>
     </header>
+
+    <main>
+        <img src="" alt="">
+
+        <h1>Vous souhaitez vendre votre bien ?</h1>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+        <article>
+            <div>
+                <p class="number_point">1</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <a href="">Estimer</a>
+        </article>
+
+        <article>
+            <div>
+                <p class="number_point">2</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <a href="">Déposer mon annonce</a>
+        </article>
+
+        <div id="breadcrumb">
+            <a href="">Accueil</a>
+            <p>> Vendre</p>
+        </div>
+    </main>
 </body>
 </html>
