to manage matthieu

--- a/to_manage.html
+++ b/to_manage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="asset/images/logo-acgdimmo.png" alt="logo">
+        <img id="headlogo"src="asset/images/logo-acgdimmo.png" alt="logoacgd">
         <nav>
             <ul>
                 <li><a href="">Acheter</a></li>
