Lien vers le css

--- a/rent.html
+++ b/rent.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="rent">
+        <!-- Create link to file css... -->
+        
+        <link href="asset/css/rent.css" rel="stylesheet">
+        <nav class="rent">
+            <ul>
                 <li>Logo</li>
                 <li>Acheter</li>
                 <li>Louer</li>
