--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-        <div class="align_menu">
+        <div class="logo">
             <a href="index.html">
                 <img src="asset/images/logo x150.png" alt="logo acgdimmo">
             </a>
@@ -16,16 +16,19 @@
         <nav>
             <ul>
                 <li><a class="activ" href="#">Accueil</a></li>
-                <li><a class="" href="#">Acheter</a></li>
-                <li><a class="" href="#">Louer</a></li>
-                <li><a class=""href="#">Vendre</a></li>
-                <li><a class="" href="#">Contact</a></li>
+                <li><a class="activ" href="#">Acheter</a></li>
+                <li><a class="activ" href="#">Louer</a></li>
+                <li><a class="activ"href="#">Vendre</a></li>
+                <li><a class="activ" href="#">Contact</a></li>
             </ul>
         </nav>
-    <div class="auth">
+        <div class="auth">
             <a class="auth" href="#">Mon compte</a>
-    </div>
+        </div>
    </header>
+   <div class="banner">
+        <img src="asset/images/collegiale.jpg" alt="photo collegiale acgdimmo">
+   </div>
  
 </body>
 </html>
