--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
    </header>
    <div class="banner">
-        <img src="asset/images/collegiale.jpg" alt="photo collegiale acgdimmo">
+        <p>taratata</p>
    </div>
  
 </body>
