--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </div>
    </header>
    <div class="banner">
-        <p>taratata</p>
+    <section>
+
+    </section>
    </div>
  
 </body>
