--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
 
     </section>
    </div>
+   <div class="news">
+    <section>
+
+    </section>
+   </div>
+   <div class="sell">
+    <section>
+
+    </section>
+   </div>
  
 </body>
 </html>
