--- a/estimate.html
+++ b/estimate.html
@@ -9,21 +9,20 @@
 
 </head>
 <body>
-    <header>
-       <div id="logo">
-       </div>
+    <header class="main-head">
+            <nav>
+                <h1 id="logo">
+                    <img src="./asset/images/logo x150.png" alt="">
 
-            <nav class="menu">
+                </h1>
                 <ul>
-                    <li>Acheter</li>
-                    <li>Louer</li>
-                    <li>Vendre</li>
-                    <li>Contact</li>
-                    <li>Mon compte</li>
+                    <li><a href="#">Acheter</a></li>
+                    <li><a href="#">Louer</a></li>
+                    <li><a href="#">Vendre</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Mon compte</a></li>
                 </ul>
             </nav>
-        </div>
-       </div>
     </header>
 </body>
 </html>
