Espacement auto entre les menus

--- a/rent.html
+++ b/rent.html
@@ -9,17 +9,17 @@
     <header>
         <!-- Create link to file css... -->
         <link href="asset/css/rent.css" rel="stylesheet">
-        <nav class="rent">
-            <ul>
-                <li>Logo</li>
-                <li>Acheter</li>
-                <li>Louer</li>
-                <li>Vendre</li>
-                <li>Contact</li>
-                <li>image_profil</li>
-                <li>Mon compte</li>
-            </ul>
-        </nav>
+            <nav>
+                <ul class="rent">
+                    <li>Logo</li>
+                    <li>Acheter</li>
+                    <li>Louer</li>
+                    <li>Vendre</li>
+                    <li>Contact</li>
+                    <li>image_profil</li>
+                    <li>Mon compte</li>
+                </ul>
+            </nav>
     </header>
         <center><h1></h1></center>
 </body>
