--- a/rent.html
+++ b/rent.html
@@ -16,7 +16,7 @@
                     <li>Louer</li>
                     <li>Vendre</li>
                     <li>Contact</li>
-                    <li>image_profil</li>
+                    <li class="">image_profil</li>
                     <li>Mon compte</li>
                 </ul>
             </nav>
