--- a/rent.html
+++ b/rent.html
@@ -12,12 +12,12 @@
             <nav>
                 <ul class="rent">
                     <li>Logo</li>
-                    <li>Acheter</li>
+                    <li><a href="buy.html">Acheter</a></li>
                     <li>Louer</li>
-                    <li>Vendre</li>
-                    <li>Contact</li>
+                    <li><a href="sell.html">Vendre</a> </li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li class="">image_profil</li>
-                    <li>Mon compte</li>
+                    <li><a href="to_manage.html">Mon compte</a></li>
                 </ul>
             </nav>
     </header>
