--- a/contact.html
+++ b/contact.html
@@ -8,17 +8,38 @@
 </head>
 <body>
     <header>
-        <ul>
-           <li>Logo</li>
-           <li>Acheter</li>
-           <li>Louer</li>
-           <li>Vendre</li>
-           <li>Contact</li>
-           <li>Image</li>
-           <li>Mon compte</li>
-
-        </ul>
-    </header>
+         <nav>
+            <img src="./asset/images/logo x150.png" alt="">
+            <div class="box">
+                <li><a href="#Acheter">Acheter</a></li>
+                <li><a href="#Louer">Louer</a></li>
+                <li><a href="#Vendre">Vendre</a></li>
+                <li><a href="#Contact">Contact</a></li>
+            </div>            
+            <ul class="tableau">
+                <li><img src="*/asset/images/compte" alt=""></li>
+                <li style="float:right"><a class="active" href="#Mon compte">Mon compte</a></li>
+            </ul> 
+        </nav>
+        </header>
 </body>
-    
+    <main>
+        <div>NOUS CONTACTER</div>
+        <div class="tableau">
+            <p>Pour une question relative à une annonce :</p>
+            <p>Contacter l'agence au 01.02.03.04.05</p>
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        
+    </main>
 </html>
