--- a/rent.html
+++ b/rent.html
@@ -10,6 +10,7 @@
         <!-- Create link to file css... -->
         <link href="asset/css/rent.css" rel="stylesheet">
             <nav>
+                
                 <ul class="rent">
                     <li>Logo</li>
                     <li><a href="buy.html">Acheter</a></li>
@@ -21,6 +22,6 @@
                 </ul>
             </nav>
     </header>
-        <center><h1></h1></center>
+        <center><h1>Chercher et trouver une location</h1></center>
 </body>
 </html>
