--- a/rent.html
+++ b/rent.html
@@ -10,15 +10,15 @@
         <!-- Create link to file css... -->
         <link href="asset/css/rent.css" rel="stylesheet">
             <nav>
-                
+                <img src="./asset/images/logo x150.png" alt="test">
                 <ul class="rent">
                     <li>Logo</li>
                     <li><a href="buy.html">Acheter</a></li>
                     <li>Louer</li>
                     <li><a href="sell.html">Vendre</a> </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li class="">image_profil</li>
-                    <li><a href="to_manage.html">Mon compte</a></li>
+                    <li>image_profil</li>
+                    <li><img src="./asset/images/compte.svg" width="24px" alt="test"><a href="to_manage.html">Mon compte</a></li>
                 </ul>
             </nav>
     </header>
