--- a/rent.html
+++ b/rent.html
@@ -18,6 +18,7 @@
                     <li><a href="sell.html">Vendre</a> </li>
                     <li><a href="contact.html">Contact</a></li>
                     <li>image_profil</li>
+                    <!-- Add parameters in file css for little picture... -->
                     <li><img class="mini" src="./asset/images/compte.svg" alt="test"><a href="to_manage.html">Mon compte</a></li>
                 </ul>
             </nav>
