feat: header functional

--- a/sell.html
+++ b/sell.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/asset/css/sell.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- font : Baloo 2-->
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet"> 
+    <!-- font : Open sans-->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
     <title>Page de vente</title>
 </head>
 <body>
     <header>
-        <a><img id="head_logo" src="" alt="Logo ACGDImmo"></a>
+        <a href="index.html"><img id="head_logo" src="asset/images/logo x150.png" alt="Logo ACGDImmo"></a>
         <nav>
             <ul>
-                <li>
-                    <a href="">Acheter</a>
-                </li>
-                <li>
-                    <a href="">Louer</a>
-                </li>
-                <li>
-                    <a href="sell.html">Vendre</a>
-                </li>
-                <li>
-                    <a href="">Contact</a>
-                </li>
+                <li><a class="title-txt" href="buy.html">Acheter</a></li>
+                <li><a class="title-txt" href="">Louer</a></li>
+                <li><a class="title-txt" href="sell.html">Vendre</a></li>
+                <li><a class="title-txt" href="">Contact</a></li>
             </ul>
         </nav>
-        <button>
-            <span></span>
-            <span>Mon compte</span>
+        <button id="account" type="button">
+            <a href="">
+                <span></span>
+                <h2 class="title-txt">Mon compte</h2>
+            </a>
         </button>
     </header>
 
     <main>
         <img src="" alt="">
 
-        <h1>Vous souhaitez vendre votre bien ?</h1>
+        <h1 class="title-txt">Vous souhaitez vendre votre bien ?</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
