--- a/to_manage.html
+++ b/to_manage.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="asset/css/faire_gerer.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="asset/css/to_manage.css">
+    <title>Faire Gérer</title>
 </head>
 <body>
     <header>
-        <img id="headlogo"src="asset/images/logo-acgdimmo.png" alt="logoacgd">
+            <a href="index.html">
+                <img class="logoacgd" src="asset/images/logo x150.png" alt="logo_acgd">
+            </a>
         <nav>
             <ul>
-                <li><a href="">Acheter</a></li>
-                <li><a href="">Louer</a></li>
-                <li><a href="">Vendre</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Me connecter</a></li>
+                <a href="buy.html">Acheter</a>
+                <a href="">Louer</a>
+                <a href="sell.html">Vendre</a>
+                <a href="contact.html">Contact</a>
             </ul>
+            <div class="account">
+            <button>
+                <span>Mon compte</span>
+            </button>
+            </div>
         </nav>
     </header>
 </body>
