--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
 <body>
     <header>
          <nav>
-            <img src="./asset/images/logo x150.png" alt="">
+            <div class="logo">
+                <img src="./asset/images/logo x150.png" alt="">
+            </div>           
             <div class="box">
                 <li><a href="#Acheter">Acheter</a></li>
                 <li><a href="#Louer">Louer</a></li>
@@ -17,14 +19,16 @@
                 <li><a href="#Contact">Contact</a></li>
             </div>            
             <ul class="tableau">
-                <li><img src="*/asset/images/compte" alt=""></li>
+                <div class="bonhomme">
+                    <img src="./asset/images/compte.svg" width="24px">
+                </div>
                 <li style="float:right"><a class="active" href="#Mon compte">Mon compte</a></li>
             </ul> 
         </nav>
         </header>
 </body>
     <main>
-        <div>NOUS CONTACTER</div>
+        <div><h1>NOUS CONTACTER</h1></div>
         <div class="tableau">
             <p>Pour une question relative à une annonce :</p>
             <p>Contacter l'agence au 01.02.03.04.05</p>
