--- a/offers.html
+++ b/offers.html
@@ -1,57 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nos offres d'emploi</title>
     <link rel="stylesheet" href="asset\css\offers.css">
 </head>
+
 <body>
-    <header>
-        <div class="logo">
-            <img src="" alt="">
-        </div>
-        <nav>
-            <ul>
-
-
-                <a href="">Acheter</a>
-                <a href="">Louer</a>
-                <a href="">Vendre</a>
-                <a href="">Contact</a>
-            </ul>
+    <header class="header">
+       <nav class="header-nav">
+        <img src="asset/images/logo x150.png"
+        alt="Deux toits superposés avec une cheminée, en dessous ACGD Immo d'écrit. C'est le logo de l'agence immobilière"> 
+            <a class="acheter" href="">Acheter</a>
+            <a href="">Louer</a>
+            <a href="">Vendre</a>
+            <a href="">Contact</a>
+                <a class="auth" href="http://">Mon compte</a>
         </nav>
-        <div class="auth">
-            <a href="http://">Se connecter</a>
-        </div>
+       
     </header>
-    <main>
-        <label for="Nos offres d'emploi">Nos offres d'emploi</label>
+    <main class="middle">
+        <br>
+        <br>
+        <label class="nos-offres" for="Nos offres d'emploi">Nos offres d'emploi</label>
         <form action="" method="get" class="form-example">
             <div class="form-example">
-            <label for="name">Emploi : </label>
-            <input type="text" name="name" id="name" required />
-        </div>
-        <form action="" method="get" class="form-example">
-            <div class="form-example">
-            <label for="name">Où : </label>
-            <input type="text" name="name" id="name"  />
-        </div>
-        <form action="" method="get" class="form-example">
-            <div class="form-example">
-            <label for="name">Rechercher : </label>
-            <input type="text" name="name" id="name"  />
-        </div>
-        <form action="" method="get" class="form-example">
-            <div class="form-example">
-            <label for="name">Contrat : </label>
-            <input type="text" name="name" id="name"   />
-        </div>
-        <a href="">Réintialiser</a>
-        </form>
-        <label for="Nos offres">Nos offres</label>
 
-    </main>
+                <label for="name">Emploi : </label>
+                <input type="text" name="name" id="name" />
+            </div>
+            <form action="" method="get" class="form-example">
+                <div class="form-example">
+                    <label for="name">Où : </label>
+                    <input type="text" name="name" id="name" />
+                </div>
+                <form action="" method="get" class="form-example">
+                    <div class="form-example">
+                        <label for="name">Rechercher : </label>
+                        <input type="text" name="name" id="name" />
+                    </div>
+                    <form action="" method="get" class="form-example">
+                        <div class="form-example">
+                            <label for="name">Contrat : </label>
+                            <input type="text" name="name" id="name" />
+                        </div>
+                        <a href="">Réintialiser</a>
+                    </form>
+                </main>
+                    <br>
+                    <br>
+                    <label for="Nos offres">Nos offres</label>
+                    <br>
+                    <br>
+                    <br>
+                    <img src="asset/images/photo_offer.jpg" alt="Photo d'illustration de l'offre d'emploi">
+                    <img src="asset/images/photo_offer.jpg" alt="Photo d'illustration de l'offre d'emploi">
+                    <img src="asset/images/photo_offer.jpg" alt="Photo d'illustration de l'offre d'emploi">
+                    <img src="asset/images/photo_offer.jpg" alt="Photo d'illustration de l'offre d'emploi">
+                    <img src="asset/images/photo_offer.jpg" alt="Photo d'illustration de l'offre d'emploi">
+                    <img src="asset/images/photo_offer.jpg" alt="Photo d'illustration de l'offre d'emploi">
+                    <style>
+                        img {
+                            width: 200px;
+                        }
+                    </style>
+                    <label for="talents">Rejoignez notre source de talents</label>
+                    <br>
+                    <br>
+                    <a href="">POSTULER</a>
+                    <br>
+                    <br>
+                    <a href="">Mieux nous connaître</a>
+                    <br>
+                    <br>
+                    <label for="slogan">"Clé en main bonheur certain !"</label>
+                    <br>
+                    <br>
+                    <label for="Description succinte d'ACGD Immo">"Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                        mollit anim id est laborum."</label>
+                    <br>
+                    <br>
+                    <br>
+                    <label for="témoignages">Témoignages de l'équipe</label>
+                    <br>
+                    <br>
+                    <img src="asset/images/real_estate_agent_1.jpg"
+                        alt="Photo présentant le premier membre de l'équipe qui témoigne">
+                    <br>
+                    <br>
+                    <label for="membre 1">Lorem ipsum</label>
+                    <label for="témoignage 1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiu smod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum</label>
+                    <br>
+                    <br>
+                    <img src="asset/images/real_estate_agent_2.jpg"
+                        alt="Photo présentant le second membre de l'équipe qui témoigne">
+                    <br>
+                    <br>
+                    <label for="témoignage 2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiu smod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum</label>
+                    <br>
+                    <br>
+                    <img src="asset/images/real_estate_agent_3.jpg"
+                        alt="Photo présentant le troisième membre de l'équipe qui témoigne">
+                    <br>
+                    <br>
+                    <label for="témoignage 3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiu smod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum</label>
+                    <br>
+                    <br>
+                    <br>
     
+    <footer class="footer">
+        <div6>
+            <label for="réseaux sociaux">Retrouvez-nous sur nos réseaux sociaux</label>
+        </div6>
+        <br>
+        <br>
+        <div3>
+            <label for="services">Services</label>
+            <a href="achat">Achat</a>
+            <a href="">Vendre</a>
+            <a href="">Louer</a>
+        </div3>
+        <br>
+        <br>
+        <div4>
+            <label for="Accès rapide">Accès rapide</label>
+            <a href="Newsletter">Inscription newsletter</a>
+            <a href="Qui sommes nous ?">Qui sommes nous ?</a>
+            <a href="Nos offres d'emploi">Nos offres d'emploi</a>
+            <a href="Avis client">Avis client</a>
+            <a href="Plan du site">Plan du site</a>
+        </div4>
+        <br>
+        <br>
+        <div5>
+            <label for="contact">Contact</label>
+            <label for="numéro">xx.xx.xx.xx.xx</label>
+            <a href="mail">contact@acgdimmo.fr</a>
+            <a href="map">Saint-Junien</a>
+        </div5>
+        <br>
+        <br>
+        <br>
+        <div6>
+            </div class="copyright">
+            <a class="copyright" href="x">acgd immo C</a>
+            </div>
+
+    </footer>
+
 </body>
+
 </html>
