--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
    </header>
    <div class="banner">
     <section class="search">
+        <ul class="menu_search">
+            <li>Vente</li>
+            <li>Localisation</li>
+            <li>Type biens...</li>
+            <li>Prix</li>
+            <li id="btn_search">Rechercher...</li>
+        </ul>
 
     </section>
    </div>
