--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./asset/css/index.css">
 </head>
 <body>
+<!--logo avec menu principal-->
    <header>
         <div class="logo">
             <a href="index.html">
@@ -26,6 +27,7 @@
             <a class="auth" href="#">Mon compte</a>
         </div>
    </header>
+<!--bannière avec fonction recherche-->
    <div class="banner">
     <section class="search">
         <ul class="menu_search">
@@ -35,14 +37,15 @@
             <li>Prix</li>
             <li id="btn_search">Rechercher...</li>
         </ul>
-
     </section>
    </div>
+<!--section actualités-->
    <div class="news">
     <section>
 
     </section>
    </div>
+<!--derniers biens en vente-->
    <div class="sell">
     <section>
 
