--- a/rent.html
+++ b/rent.html
@@ -11,14 +11,14 @@
         <link href="asset/css/rent.css" rel="stylesheet">
             <nav>
                 
-                <ul class="rent">
-                    <img src="./asset/images/logo x150.png" alt="test">
-                    <li><a href="buy.html">Acheter</a></li>
-                    <li>Louer</li>
-                    <li><a href="sell.html">Vendre</a> </li>
-                    <li><a href="contact.html">Contact</a></li>
+                <ul class="menu">
+                    <img src="./asset/images/logo x150.png" alt="test" height="24px" width="24px">
+                    <li class="menu-format"><a href="buy.html">Acheter</a></li>
+                    <li class="menu-format">Louer</li>
+                    <li class="menu-format"><a href="sell.html">Vendre</a> </li>
+                    <li class="menu-format"><a href="contact.html">Contact</a></li>
                     <!-- Add parameters in file css for little picture... -->
-                    <li><img class="mini" src="./asset/images/compte.svg" alt="test"><a href="to_manage.html">Mon compte</a></li>
+                    <li class="menu-format"><img class="mini" src="./asset/images/compte.svg" alt="test"><a href="to_manage.html">Mon compte</a></li>
                 </ul>
             </nav>
     </header>
