--- a/rent.html
+++ b/rent.html
@@ -12,13 +12,14 @@
             <nav>
                 
                 <ul class="menu">
-                    <img src="./asset/images/logo x150.png" alt="test" height="24px" width="24px">
+                    <img class="mini" src="./asset/images/logo x150.png" alt="test">
                     <li class="menu-format"><a href="buy.html">Acheter</a></li>
                     <li class="menu-format">Louer</li>
                     <li class="menu-format"><a href="sell.html">Vendre</a> </li>
                     <li class="menu-format"><a href="contact.html">Contact</a></li>
                     <!-- Add parameters in file css for little picture... -->
-                    <li class="menu-format"><img class="mini" src="./asset/images/compte.svg" alt="test"><a href="to_manage.html">Mon compte</a></li>
+                    <img class="mini" src="./asset/images/compte.svg" alt="test">
+                    <li class="menu-format"><a href="to_manage.html">Mon compte</a></li>
                 </ul>
             </nav>
     </header>
