--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="./asset/css/contact.css">
 </head>
 <body>
+    <!--creation du header-->
     <header>
          <nav>
             <div class="logo">
-                <img src="./asset/images/logo x150.png" alt="">
+                <img src="./asset/images/logo x150.png" alt="logo" width="150" height="75">
             </div>           
-            <div class="box">
+            <div class="menu">
                 <li><a href="#Acheter">Acheter</a></li>
                 <li><a href="#Louer">Louer</a></li>
                 <li><a href="#Vendre">Vendre</a></li>
@@ -29,7 +30,7 @@
 </body>
     <main>
         <div><h1>NOUS CONTACTER</h1></div>
-        <div class="tableau">
+        <div class="annonce">
             <p>Pour une question relative à une annonce :</p>
             <p>Contacter l'agence au 01.02.03.04.05</p>
         </div>
