--- a/rent.html
+++ b/rent.html
@@ -18,8 +18,8 @@
                     <li class="menu-format"><a href="sell.html">Vendre</a> </li>
                     <li class="menu-format"><a href="contact.html">Contact</a></li>
                     <!-- Add parameters in file css for little picture... -->
-                    <img class="mini" src="./asset/images/compte.svg" alt="test">
-                    <li class="menu-format"><a href="to_manage.html">Mon compte</a></li>
+                    
+                    <li style="float: right;" class="menu-format"><img class="mini" src="./asset/images/compte.svg" alt="test"><a href="to_manage.html">Mon compte</a></li>
                 </ul>
             </nav>
     </header>
