--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./asset/css/index.css">
 </head>
 <body>
-<!--logo avec menu principal-->
+<!-- logo avec menu principal -->
    <header>
         <div class="logo">
             <a href="index.html">
@@ -27,25 +27,25 @@
             <a class="auth" href="#">Mon compte</a>
         </div>
    </header>
-<!--bannière avec fonction recherche-->
+<!-- bannière avec fonction recherche -->
    <div class="banner">
     <section class="search">
         <ul class="menu_search">
-            <li>Vente</li>
-            <li>Localisation</li>
-            <li>Type biens...</li>
-            <li>Prix</li>
-            <li id="btn_search">Rechercher...</li>
+            <li class="menu_search_deco">Vente</li>
+            <li class="menu_search_deco">Localisation</li>
+            <li class="menu_search_deco">Type biens...</li>
+            <li class="menu_search_deco">Prix</li>
+            <li class="menu_search_deco" id="menu_search_deco">Rechercher...</li>
         </ul>
     </section>
    </div>
-<!--section actualités-->
+<!-- section actualités -->
    <div class="news">
     <section>
 
     </section>
    </div>
-<!--derniers biens en vente-->
+<!-- derniers biens en vente -->
    <div class="sell">
     <section>
 
