--- a/rent.html
+++ b/rent.html
@@ -10,16 +10,15 @@
         <!-- Create link to file css... -->
         <link href="asset/css/rent.css" rel="stylesheet">
             <nav>
-                
+                <!-- Add parameters in file css for little picture... -->
                 <ul class="menu">
                     <img class="mini" src="./asset/images/logo x150.png" alt="test">
                     <li class="menu-format"><a href="buy.html">Acheter</a></li>
                     <li class="menu-format">Louer</li>
                     <li class="menu-format"><a href="sell.html">Vendre</a> </li>
                     <li class="menu-format"><a href="contact.html">Contact</a></li>
-                    <!-- Add parameters in file css for little picture... -->
-                    
-                    <li style="float: right;" class="menu-format"><img class="mini" src="./asset/images/compte.svg" alt="test"><a href="to_manage.html">Mon compte</a></li>
+                    <li class="menu-right"><a href="to_manage.html">Mon compte</a></li>
+                    <li class="menu-right"><img class="mini" src="./asset/images/compte.svg" alt="test"></li>
                 </ul>
             </nav>
     </header>
