--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    </header>
 <!-- bannière avec fonction recherche -->
    <div class="banner">
-    <section class="search">
+     <div class="search">
         <ul class="menu_search">
             <li class="menu_search_deco">Vente</li>
             <li class="menu_search_deco">Localisation</li>
@@ -37,19 +37,17 @@
             <li class="menu_search_deco">Prix</li>
             <li class="menu_search_deco" id="menu_search_deco">Rechercher...</li>
         </ul>
-    </section>
-   </div>
+     </div>
+    </div>
 <!-- section actualités -->
-   <div class="news">
-    <section>
-
-    </section>
-   </div>
+    <div class="news">
+        <div class="news_slide">
+            <p>taratata</p>
+        </div> 
+    </div>
 <!-- derniers biens en vente -->
    <div class="sell">
-    <section>
-
-    </section>
+        <p>test</p>
    </div>
  
 </body>
