add fonts & img and clear css

--- a/sell.html
+++ b/sell.html
@@ -4,23 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/asset/css/sell.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- font : Baloo 2-->
+    <!-- font : Baloo 2 -->
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet"> 
-    <!-- font : Open sans-->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
+    <!-- font : Open sans -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Page de vente</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img id="head_logo" src="asset/images/logo x150.png" alt="Logo ACGDImmo"></a>
+        <a href="index.html"><img id="head_logo" src="asset/images/logo x150.png" alt="Logo ACGDImmo" width="" height="80px"></a>
         <nav>
             <ul>
                 <li><a class="title-txt" href="buy.html">Acheter</a></li>
-                <li><a class="title-txt" href="">Louer</a></li>
-                <li><a class="title-txt" href="sell.html">Vendre</a></li>
-                <li><a class="title-txt" href="">Contact</a></li>
+                <li><a class="title-txt" href="rent.html">Louer</a></li>
+                <li><a class="title-txt active" href="sell.html">Vendre</a></li>
+                <li><a class="title-txt" href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <button id="account" type="button">
