--- a/to_manage.html
+++ b/to_manage.html
@@ -8,22 +8,25 @@
 </head>
 <body>
     <header>
-            <a href="index.html">
-                <img class="logoacgd" src="asset/images/logo x150.png" alt="logo_acgd">
-            </a>
-        <nav>
-            <ul>
-                <a href="buy.html">Acheter</a>
-                <a href="">Louer</a>
-                <a href="sell.html">Vendre</a>
-                <a href="contact.html">Contact</a>
-            </ul>
-            <div class="account">
-            <button>
-                <span>Mon compte</span>
-            </button>
-            </div>
-        </nav>
+        <div class="logo">
+            <!-- Logo -->
+            <img src="asset/images/logo x150.png" alt="logo" width="150" height="75">
+        </div>
+        <div>
+            <!-- Menu -->  
+            <nav>
+                <ul class="menu">
+                    <li><a class="active" href="buy.html">Acheter</a></li>
+                    <li><a href="rent.html">Louer</a></li>
+                    <li><a href="sell.html">Vendre</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>      
+        </div>
+        <div>
+            <!-- Mon Compte -->
+            <a href="">Me connecter</a>
+        </div>
     </header>
 </body>
 </html>
