12/01 new file(2) CSS in progress

--- a/offers.html
+++ b/offers.html
@@ -10,9 +10,9 @@
 
 <body>
     <header class="header">
+        <img class="logo" src="asset/images/logo x150.png"
+        alt="Deux toits superposés avec une cheminée, en dessous ACGD Immo d'écrit. C'est le logo de l'agence immobilière">    
        <nav class="header-nav">
-        <img src="asset/images/logo x150.png"
-        alt="Deux toits superposés avec une cheminée, en dessous ACGD Immo d'écrit. C'est le logo de l'agence immobilière"> 
             <a class="acheter" href="">Acheter</a>
             <a href="">Louer</a>
             <a href="">Vendre</a>
@@ -166,3 +166,32 @@
 </body>
 
 </html>
+
+<!-- correction :--> 
+<header>
+    <div>
+        <a href="index.html">
+        <img src="asset/images/logo x150.png" alt="logo" width="75">
+    </a>
+    <div>
+        <div>
+            <link rel="stylesheet" href="./asset/css/offers.css">
+        </div>
+        <div>
+            <nav>
+                <ul class="menu">
+                    <li><a href="buy.html">Acheter</a>
+                    <li><a href="rent.html">Louer</a>
+                    <li><a href="sell.html">Vendre</a>
+                    <li><a href="contact.html">Contact</a>
+                </ul>
+            </nav>  
+        </div>
+        <li><a href="#">Mon compte
+        </a>
+    </li>
+        <div>
+
+        </div>
+
+
