--- a/rent.html
+++ b/rent.html
@@ -22,6 +22,8 @@
                 </ul>
             </nav>
     </header>
-        <center><h1>Chercher et trouver une location</h1></center>
+    <div style="text-align: center;background-color: #B1F3BC;">
+        <h1>Chercher et trouver une location</h1>
+    </div>
 </body>
 </html>
