define HTML tag and define property of class active

--- a/sell.html
+++ b/sell.html
@@ -23,7 +23,7 @@
                 <li><a class="title-txt" href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <button id="account" type="button">
+        <button class="account-connexion" type="button">
             <a href="">
                 <span></span>
                 <h2 class="title-txt">Mon compte</h2>
@@ -41,7 +41,7 @@
         </div>
         
         <section>
-            <article>
+            <article class="step-block">
                 <img src="asset/images/serre-main.png" alt="Photo serrant la main">
                 <div>
                     <p class="number_point">1</p>
@@ -50,7 +50,7 @@
                 <button type="button"><h2>Conseils</h2></button>
             </article>
     
-            <article>
+            <article class="step-block">
                 <img src="asset/images/rappel.png" alt="Photo appel téléphonique">
                 <div>
                     <p class="number_point">2</p>
@@ -69,11 +69,11 @@
     </main>
 
     <footer>
-        <div>
-            <a href="">
+        <div class="identity">
+            <a href="index.html">
                 <img src="asset/images/logo x150.png" alt="Logo ACGDImmo">
             </a>
-            <div>
+            <div class="social-media">
                 <p>Retrouvez-nous sur nos réseaux sociaux</p>
                 <ul>
                     <li>
@@ -88,17 +88,17 @@
                 </ul>
             </div>
         </div>
-        <ul>
-            <li>
-                <h2>Services</h2>
+        <ul class="quick-links-block">
+            <li class="quick-links">
+                <h2 class="footer-title">Services</h2>
                 <ul>
                     <li><a href="buy.html">Achat</a></li>
                     <li><a href="sell.html">Vendre</a></li>
                     <li><a href="rent.html">Louer</a></li>
                 </ul>
             </li>
-            <li>
-                <h2>Accès rapide</h2>
+            <li class="quick-links">
+                <h2 class="footer-title">Accès rapide</h2>
                 <ul>
                     <li><a href="">Inscription Newsletter</a></li>
                     <li><a href="">Qui sommes-nous ?</a></li>
@@ -107,16 +107,16 @@
                     <li><a href="">Plan du site</a></li>
                  </ul>
             </li>
-            <li>
-                <h2>Contact</h2>
-                <ul>
+            <li class="quick-links">
+                <h2 class="footer-title">Contact</h2>
+                <ul class="contact-links">
                     <li><a href="">01.02.03.04.05</a></li>
                     <li><a href="">contact@acgdimmo.fr</a></li>
                     <li><a href="">Saint-Junien</a></li>
                 </ul>
             </li>
         </ul>
-        <div>
+        <div class="copyright">
             <p>acgdimmo ©</p>
         </div>
     </footer>
