--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
                 <img src="./asset/images/logo x150.png" alt="logo" width="150" height="75">
             </div>           
             <div class="menu">
-                <li><a href="#Acheter">Acheter</a></li>
-                <li><a href="#Louer">Louer</a></li>
-                <li><a href="#Vendre">Vendre</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="buy.html">Acheter</a></li>
+                <li><a href="rent.html">Louer</a></li>
+                <li><a href="sell.html">Vendre</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </div>            
             <ul class="tableau">
                 <div class="bonhomme">
@@ -26,13 +26,53 @@
                 <li style="float:right"><a class="active" href="#Mon compte">Mon compte</a></li>
             </ul> 
         </nav>
+        <!--ajout truetype baloo 2-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
+
         </header>
 </body>
     <main>
-        <div><h1>NOUS CONTACTER</h1></div>
+        <center><h1>NOUS CONTACTER</h1></center>
+            <!-- paramétrage center position fixe-->
         <div class="annonce">
-            <p>Pour une question relative à une annonce :</p>
-            <p>Contacter l'agence au 01.02.03.04.05</p>
+            <p align="left">Pour une question relative à une annonce :<br></p>
+            <p align="left"><i>Contacter l'agence au 01.02.03.04.05</i><br></p>
+        </div>
+        <div class="rv"></div>
+            <p align="right">Pour une prise de rendez-vous pour une visite :<br></p>
+            <p align="right"><i> Contacter l'agence au 01.23.45.67.89 </i><br></p>
+        </div>
+        <div class="autre demande">
+            <div>Pour toute autre demande, vous pouvez utiliser le formulaire de contact suivant :</div>
+                <ul>
+                    <li>* Nom : </li>
+                    <li>* Prénom : </li>
+                    <li>* Adresse mail :</li>
+                    <li>* Sujet :
+                        <ul id="menu déroulant">
+                            <li><a href="Particuliers">Particuliers</a></li>
+                                <ul>
+                                    <li><a href="Mon espace perso">Mon espace perso</a></li>
+                                    <li><a href="Mon profil locataire">Mon profil locataire</a></li>
+                                    <li><a href="Recherche d'un bien">Recherche d'un bien</a></li>
+                                    <li><a href="Vendre son bien">Vendre son bien</a></li>
+                                    <li><a href="L'alerte immo">L'alerte immo</a></li>
+                                    <li><a href="Newsletter">Newsletter</a></li>
+                                    <li><a href="Données personnelles : Exercer vos droits">Données personnelles : Exercer vos droits</a></li>
+                                    <li><a href="Problèmes techniques sur le site">Problèmes techniques sur le site</a></li>
+                                </ul>
+                            <li><a href="Professionnels">Professionnels</a></li>
+                                <ul>
+                                    <li><a href="Partenariat">Partenariat</a></li>
+                                    <li><a href="Régie publicitaire">Régie publicitaire</a></li>
+                                    <li><a href="Offres commerciales">Offres commerciales</a></li>
+                                </ul>
+                            
+                        </ul>
+                    </li>
+                </ul>
         </div>
         <div></div>
         <div></div>
@@ -42,9 +82,7 @@
         <div></div>
         <div></div>
         <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div></div> 
         
     </main>
 </html>
