--- a/rent.html
+++ b/rent.html
@@ -22,8 +22,15 @@
                 </ul>
             </nav>
     </header>
-    <div style="text-align: center;background-color: #B1F3BC;">
-        <h1>Chercher et trouver une location</h1>
+    <div class="font-title div1">
+        <div>
+            <div>
+                <img src="./asset/images/rent/picture-title.jpg" alt="">
+            </div>
+            <div>
+                <h1>Chercher et trouver une location</h1>
+            </div>
+        </div>
     </div>
 </body>
 </html>
